--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = Integer.parseInt(findProperty('android.minSdkVersion') ?: '23')
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '34')
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '34')
-        kotlinVersion = findProperty('android.kotlinVersion') ?: '1.8.10'
+        kotlinVersion = findProperty('android.kotlinVersion') ?: '1.9.20'
 
         ndkVersion = "25.1.8937393"
     }
@@ -15,8 +15,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle')
-        classpath('com.facebook.react:react-native-gradle-plugin')
+        classpath 'com.android.tools.build:gradle:8.3.2'
+        classpath 'com.facebook.react:react-native-gradle-plugin:+'
     }
 }
 
@@ -38,3 +38,10 @@ allprojects {
         maven { url 'https://www.jitpack.io' }
     }
 }
+
+
+
+//dependencies {
+    // Otras dependencias...
+  //  implementation 'com.facebook.react:hermes-android:0.73.6' // Mantén esta línea si estás utilizando una versión compatible de Gradle
+//}
